Update project name in the homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ayush2297.github.io/publisher",
+  "homepage": "http://ayush2297.github.io/myPublisher",
   "name": "publisher",
   "version": "0.1.0",
   "private": true,
